// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSearchBox render - custom placeholder and incremental 1`] = `
<OuiFieldSearch
  aria-label="aria-label"
  className="testClass1 testClass2"
  compressed={false}
  data-test-subj="test subject string"
  defaultValue=""
  fullWidth={true}
  incremental={true}
  inputRef={[Function]}
  isClearable={true}
  isLoading={false}
  onSearch={[Function]}
  placeholder="..."
/>
`;

exports[`OuiSearchBox render - no config 1`] = `
<OuiFieldSearch
  aria-label="aria-label"
  className="testClass1 testClass2"
  compressed={false}
  data-test-subj="test subject string"
  defaultValue=""
  fullWidth={true}
  incremental={false}
  inputRef={[Function]}
  isClearable={true}
  isLoading={false}
  onSearch={[Function]}
  placeholder="Search..."
/>
`;
